--- a/res/xml/voiceinput.xml
+++ b/res/xml/voiceinput.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<trigger command="START_A_RUN">
+<trigger keyword="Display Sensors">
 
     <!--  <input prompt="@string/voice_prompt" /> -->
     <constraints microphone="true" />
